# WebServer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  callgrind.out.308444  close_test.py  echo_server.cpp  main.cpp  output.puml  threadPool_test
base/: CurrentThread.cpp  CurrentThread.h  Latch.h  TimeStamp.cpp  TimeStamp.h  Util.cpp  Util.h  common.h  copyable.h
echo_server/: Channel.cpp  Channel.h  Epoll.cpp  Epoll.h  InetAddress.cpp  Makefile  Socket.cpp  Socket.h  Util.cpp  Util.h  main.cpp  server.cpp
echo_server/src/: Acceptor.cpp  Acceptor.h  Buffer.h  Channel.cpp  Channel.h  Connection.h  EventLoop.cpp  EventLoop.h  InetAddress.h  Server.cpp  Server.h  Socket.cpp  Socket.h
example/echo_server/: Makefile  echo_server.cpp  echo_server.h  main.cpp
http/: HttpContext.h  HttpRequest.h
learn_test/listen/: listen.cpp  note.md
logger/: AsyncLogger.cpp  FixedBuffer.cpp  FixedBuffer.h  LogSream.cpp  LogSream.h  LogStream.h  Logger.h  LoggerImpl.cpp  LoggerImpl.h
note/: TcpConnection.md  event_fd.md
src/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  InetAddress.cpp  Server.cpp  Server.h  Socket.cpp  Socket.h  ThreadPool.cpp  ThreadPool.h
src/base/: CurrentThread.cpp  Latch.h  Util.cpp
src/eventloop/: Channel.h  Epoller.cpp  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h
src/http/: HttpContext.cpp  HttpRequest.cpp
src/logger/: AsyncLogger.h  FixedBuffer.cpp  FixedBuffer.h  LogFile.cpp  LogFile.h  LogStream.h  Logger.h  LoggerImpl.cpp  LoggerImpl.h
src/tcp/: Acceptor.h  Epoller.cpp  EventLoopThread.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  tcp.h
src/timer/: Timer.h  TimerQueue.cpp  TimerQueue.h  Timerfd.h
tcp/: Acceptor.cpp  Acceptor.h  Channel.cpp  Channel.h  CurrentThread.h  Epoller.cpp  Epoller.h  EventLoop.cpp  EventLoop.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  TCPServer.cpp  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  ThreadPool.cpp  Timer.h  TimerQueue.cpp  Timerfd.cpp  common.h
test/: close_test.py  crash  crash_test.cpp  echoserver  test.cpp  threadPool_test.cpp
test/Log_test/: Logstream_test.cpp
test/close_test/: close_test.py  close_wait.py
test/template_test/: main.cpp  main.s  t.cpp  t.s  template.h  template.s
